styles: fix notion-external-mention svg style on Safari

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -422,3 +422,12 @@
 .notion-simple-table{
   width: 100%;
 }
+
+.notion-external{
+
+}
+
+.notion-external-mention .notion-external-image svg {
+  width: 100%;
+  height: 100%;
+}
